--- a/package.json
+++ b/package.json
@@ -1,13 +1,28 @@
 {
-  "name": "workspace",
+  "name": "react-diff",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "------CLEAN": "---------------------------------------------------------",
+    "clean:tests": "rimraf test-results coverage playwright-report",
+    "clean:dist": "rimraf dist",
+    "clean": "run-p clean:*",
+    "-------TEST": "---------------------------------------------------------",
+    "test": "vitest --run --reporter verbose --config tests/config/vitest.config.ts",
+    "test-cov": "vitest run --coverage",
+    "e2e:start": "docker-compose -f docker/docker-compose.e2e.yml up -d",
+    "e2e:test": "playwright test --config=tests/config/playwright.config.ts --reporter=dot",
+    "e2e:stop": "docker-compose -f docker/docker-compose.e2e.yml down",
+    "e2e": "npm run e2e:start && sleep 5 && npm run e2e:test && npm run e2e:stop",
+    "-------RUN": "---------------------------------------------------------",
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "-------SONAR": "---------------------------------------------------------",
+    "sonar:cicd": "dotenv -e .env.cicd -e .env -- sonar-scanner -Dproject.settings=./sonar-cicd.properties",
+    "sonar:local": "dotenv -e .env.local -e .env -- sonar-scanner -Dproject.settings=./sonar-local.properties --debug"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -22,6 +37,7 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/browser": "^3.1.2",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
