feat: Refactor testing setup and add CounterButton component
- Updated package.json to improve test commands and added coverage support.
- Created CounterButton component with state management for count.
- Added tests for CounterButton to verify rendering and click functionality.
- Introduced tsconfig.test.json for better test environment configuration.
- Updated vitest.config.ts to include custom test configurations and coverage settings.
- Removed unnecessary vitest.setup.ts file and integrated setup directly into vitest.config.ts.
- Added comprehensive README for TypeScript configuration and usage.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ dist-ssr
 # bu dosyaların git'e eklenmesi gerekiyor.
 # *.local
 
+coverage
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
