--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "clean:dist": "rimraf dist",
     "clean": "run-p clean:*",
     "-------TEST": "---------------------------------------------------------",
-    "test": "vitest --run --reporter verbose --config tests/config/vitest.config.ts",
-    "test-cov": "vitest run --coverage",
+    "test": "vitest --run --reporter verbose --config ./vitest.config.ts",
+    "test:coverage": "vitest run --coverage",
+    "--------E2E": "---------------------------------------------------------",
     "e2e:start": "docker-compose -f docker/docker-compose.e2e.yml up -d",
     "e2e:test": "playwright test --config=tests/config/playwright.config.ts --reporter=dot",
     "e2e:stop": "docker-compose -f docker/docker-compose.e2e.yml down",
@@ -37,11 +38,13 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/browser": "^3.1.2",
+    "@vitest/coverage-istanbul": "^3.1.2",
     "dotenv-cli": "^8.0.0",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "jsdom": "^26.1.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1",
