fix: ensure tree and nano are installed in Dockerfile

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,6 +9,8 @@ RUN apt-get update && \
         git \
         curl \
         net-tools \
+        tree \
+        nano \
         openjdk-17-jre-headless \
         docker.io
 
