feat: enhance testing setup and improve CounterButton logic with detailed logging

--- a/package.json
+++ b/package.json
@@ -9,21 +9,30 @@
     "clean:dist": "rimraf dist",
     "clean": "run-p clean:*",
     "-------TEST": "---------------------------------------------------------",
-    "test": "vitest --run --reporter verbose --config ./vitest.config.ts",
-    "test:coverage": "vitest run --coverage",
+    "test": "npx vitest --run --config ./vitest.config.ts",
+    "test:watch": "npx vitest --watch --ui --api.host=0.0.0.0 --api.port=8999",
+    "test:changed": "npx vitest --ui --api.host=0.0.0.0 --api.port=8999 --coverage=false --changed",
+    "test:dir": "npx vitest --ui --api.host=0.0.0.0 --api.port=8999 --coverage=false --dir src/components",
+    "test:verbose": "npx vitest --run --reporter verbose --coverage=false",
+    "test:junit": "npx vitest run --reporter=junit --outputFile=test-results/unit/junit/output.xml --coverage=false",
+    "test:html": "npx vitest run --reporter=html --outputFile=test-results/unit/html/output.html --coverage=false",
+    "test:json": "npx vitest run --reporter=json --outputFile=test-results/unit/json/output.json --coverage=false",
+    "test:coverage": "npx vitest run --coverage=true",
+    "test:coverage:newcode": "npx vitest run --coverage && diff-cover coverage/lcov.info --html-report=diff-cover.html --compare-branch=main  --fail-under=90",
     "--------E2E": "---------------------------------------------------------",
     "e2e:start": "docker-compose -f docker/docker-compose.e2e.yml up -d",
     "e2e:test": "playwright test --config=tests/config/playwright.config.ts --reporter=dot",
     "e2e:stop": "docker-compose -f docker/docker-compose.e2e.yml down",
     "e2e": "npm run e2e:start && sleep 5 && npm run e2e:test && npm run e2e:stop",
     "-------RUN": "---------------------------------------------------------",
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "npx vite",
+    "build": "npx vite build --outDir dist",
     "lint": "eslint .",
-    "preview": "vite preview",
+    "preview": "npx vite preview --outDir dist",
     "-------SONAR": "---------------------------------------------------------",
-    "sonar:cicd": "dotenv -e .env.cicd -e .env -- sonar-scanner -Dproject.settings=./sonar-cicd.properties",
-    "sonar:local": "dotenv -e .env.local -e .env -- sonar-scanner -Dproject.settings=./sonar-local.properties --debug"
+    "sonar": "dotenv -e .env.${ENV} -e .env -- sonar-scanner -Dproject.settings=sonar-${ENV}.properties --debug",
+    "sonar:cicd": "ENV=cicd npm run sonar",
+    "sonar:local": "ENV=local npm run sonar"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -39,6 +48,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/browser": "^3.1.2",
     "@vitest/coverage-istanbul": "^3.1.2",
+    "@vitest/ui": "^3.1.2",
     "dotenv-cli": "^8.0.0",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
