feat: add mushan.vscode-paste-image extension and update .gitignore for test-results and html

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,8 @@
         "MS-vsliveshare.vsliveshare",
         "SonarSource.sonarlint-vscode",
         "ms-playwright.playwright",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+        "mushan.vscode-paste-image"
       ],
       "settings": {
         "terminal.integrated.defaultProfile.linux": "bash",
