feat: update test scripts in package.json and configure server settings in vite.config.ts

--- a/package.json
+++ b/package.json
@@ -9,26 +9,40 @@
     "clean:dist": "rimraf dist",
     "clean": "run-p clean:*",
     "-------TEST": "---------------------------------------------------------",
-    "test": "npx vitest --run --config ./vitest.config.ts",
-    "test:watch": "npx vitest --watch --ui --api.host=0.0.0.0 --api.port=8999",
-    "test:changed": "npx vitest --ui --api.host=0.0.0.0 --api.port=8999 --coverage=false --changed",
-    "test:dir": "npx vitest --ui --api.host=0.0.0.0 --api.port=8999 --coverage=false --dir src/components",
-    "test:verbose": "npx vitest --run --reporter verbose --coverage=false",
-    "test:junit": "npx vitest run --reporter=junit --outputFile=test-results/unit/junit/output.xml --coverage=false",
-    "test:html": "npx vitest run --reporter=html --outputFile=test-results/unit/html/output.html --coverage=false",
-    "test:json": "npx vitest run --reporter=json --outputFile=test-results/unit/json/output.json --coverage=false",
-    "test:coverage": "npx vitest run --coverage=true",
-    "test:coverage:newcode": "npx vitest run --coverage && diff-cover coverage/lcov.info --html-report=diff-cover.html --compare-branch=main  --fail-under=90",
+    "test": "npx vitest --config ./vitest.config.ts",
+    "test:run:basic": "npm run test -- --run --coverage=false",
+    "test:run:coverage": "npm run test -- --run --coverage=true",
+    "test:ui": "npm run test -- --ui --api.host=0.0.0.0 --api.port=8999",
+    "test:ui:basic": "npm run test:ui -- --coverage=false",
+    "test:ui:coverage": "npm run test:ui -- --coverage=true",
+    "----------": "---------------------------------------------------------",
+    "test:watch:basic": "npm run test -- --watch --coverage=false",
+    "test:watch:coverage": "npm run test -- --watch --coverage=true",
+    "test:watch:ui:basic": "npm run test:ui -- --watch --coverage=false",
+    "test:watch:ui:coverage": "npm run test:ui -- --watch --coverage=true",
+    "-----------": "---------------------------------------------------------",
+    "test:dir:ui": "npm run test:ui -- --dir ./src/components",
+    "test:changed": "npm run test:run:basic -- --changed",
+    "test:changed:ui": "npm run test:ui:basic --changed",
+    "------------": "---------------------------------------------------------",
+    "test:verbose": "npm run test:run:basic -- --reporter=verbose",
+    "test:junit": "npm run test:run:basic -- --reporter=junit --outputFile=test-results/unit/junit/output.xml",
+    "test:html": "npm run test:run:basic -- --reporter=html --outputFile=test-results/unit/html/output.html",
+    "test:json": "npm run test:run:basic -- --reporter=json --outputFile=test-results/unit/json/output.json",
+    "---COVERAGE": "---------------------------------------------------------",
+    "test:run:coverage:html": "npm run test:run:coverage -- --reporter=html --outputFile=test-results/coverage/output.html",
+    "test:ui:coverage:html": "npm run test:ui:coverage -- --reporter=html --outputFile=test-results/coverage/output.html",
+    "test:coverage:newcode": "npm run test:run:coverage && diff-cover coverage/lcov.info --html-report=diff-cover.html --compare-branch=main  --fail-under=90",
     "--------E2E": "---------------------------------------------------------",
     "e2e:start": "docker-compose -f docker/docker-compose.e2e.yml up -d",
     "e2e:test": "playwright test --config=tests/config/playwright.config.ts --reporter=dot",
     "e2e:stop": "docker-compose -f docker/docker-compose.e2e.yml down",
     "e2e": "npm run e2e:start && sleep 5 && npm run e2e:test && npm run e2e:stop",
     "-------RUN": "---------------------------------------------------------",
-    "dev": "npx vite",
-    "build": "npx vite build --outDir dist",
+    "dev": "npx vite --config ./vite.config.ts",
+    "build": "npm run dev -- build --outDir dist",
+    "preview": "npm run build && npm run dev -- preview --outDir dist",
     "lint": "eslint .",
-    "preview": "npx vite preview --outDir dist",
     "-------SONAR": "---------------------------------------------------------",
     "sonar": "dotenv -e .env.${ENV} -e .env -- sonar-scanner -Dproject.settings=sonar-${ENV}.properties --debug",
     "sonar:cicd": "ENV=cicd npm run sonar",
