--- a/.env.cicd
+++ b/.env.cicd
@@ -4,4 +4,5 @@
 # - SONAR_LOGIN veya SONAR_TOKEN (Kimlik doğrulama)
 
 SONAR_TOKEN=squ_3155eb9c956e755bc6e1e86f2c152580e63d3c0d
+SONAR_HOST_URL=https://sonar.telenity.com
 # admin > SONAR_TOKEN=squ_96365c7d897773fa362cec6a7adba617b49ed92a
