feat: update Jenkins pipeline and package.json for improved test coverage reporting

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "---COVERAGE": "---------------------------------------------------------",
     "test:run:coverage:html": "npm run test:run:coverage -- --reporter=html --outputFile=test-results/coverage/output.html",
     "test:ui:coverage:html": "npm run test:ui:coverage -- --reporter=html --outputFile=test-results/coverage/output.html",
-    "test:coverage:newcode": "npm run test:run:coverage && diff-cover coverage/lcov.info --html-report=diff-cover.html --compare-branch=main  --fail-under=90",
+    "coverage:newcode": "diff-cover coverage/lcov.info --html-report=diff-cover.html --compare-branch=main  --fail-under=90",
+    "test:run:coverage:newcode": "npm run test:run:coverage && npm run coverage:newcode",
     "--------E2E": "---------------------------------------------------------",
     "e2e:start": "docker-compose -f docker/docker-compose.e2e.yml up -d",
     "e2e:test": "playwright test --config=tests/config/playwright.config.ts --reporter=dot",
