feat: update Jenkinsfile to add repository cloning stage and enhance parameter definitions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
         "SonarSource.sonarlint-vscode",
         "ms-playwright.playwright",
         "ms-azuretools.vscode-docker",
-        "mushan.vscode-paste-image"
+        "mushan.vscode-paste-image",
+        "NicolasVuillamy.vscode-groovy-lint"
       ],
       "settings": {
         "terminal.integrated.defaultProfile.linux": "bash",
