feat: add Dockerfiles for build and development environments, update Jenkinsfile for enhanced CI/CD process

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: telenity/devcontainer/react:latest
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     volumes:
       - ..:/workspace:cached
       - /var/run/docker.sock:/var/run/docker.sock
