feat: enhance Jenkins setup with Docker integration, add Trivy for security scanning, and update configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ coverage
 test-results
 html
 
+.devcontainer/services/jenkins/volume/jenkins_home/**
+
 # Editor directories and files
 #.vscode/*
 !.vscode/extensions.json
