--- a/.devcontainer/Dockerfile.build
+++ b/.devcontainer/Dockerfile.build
@@ -14,7 +14,15 @@ RUN apt-get update && \
     apt-get install -y \
         git \
         openjdk-17-jre-headless \
-        docker.io
+        docker.io \
+        # Trivy kurulumu
+        wget \
+        gnupg \
+        lsb-release && \
+        wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | gpg --dearmor -o /usr/share/keyrings/trivy.gpg && \
+        echo "deb [signed-by=/usr/share/keyrings/trivy.gpg] https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -cs) main" > /etc/apt/sources.list.d/trivy.list && \
+        apt-get update && \
+        apt-get install -y trivy
 
 RUN apt-get clean && \
     rm -rf /var/lib/apt/lists/*
