feat: update Jenkinsfile to refine pipeline stages and improve checkout process

--- a/.devcontainer/services/jenkins/volume/casc_configs/jenkins_config.yaml
+++ b/.devcontainer/services/jenkins/volume/casc_configs/jenkins_config.yaml
@@ -204,7 +204,7 @@ jobs:
   - script: >
       pipelineJob("jenkinsfile-ornegi") {
         displayName('React App Pipeline Jobu')
-        description('Bir react uygulamasının Jenkinsfile kullanılarak oluşturulan pipeline')
+        description('Pipeline script from SCM ile react uygulama hattı.')
 
         definition {
           cpsScm {
