--- a/.devcontainer/Dockerfile.build
+++ b/.devcontainer/Dockerfile.build
@@ -12,6 +12,7 @@ ENV LANG=C.UTF-8
 RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y \
+        tree \
         git \
         openjdk-17-jre-headless \
         docker.io \
