--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   devcontainer:
     container_name: devcontainer
@@ -102,6 +100,7 @@ services:
 
 networks:
   devnet:
+    name: devnet
     driver: bridge
     ipam:
       config:
