fix: update curl command in Jenkinsfile for proper URL formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "sonarlint.connectedMode.project": {
         "connectionId": "sonar_container",
-        "projectKey": "cem"
+        "projectKey": "react-diff"
     }
 }
