--- a/.env.cicd
+++ b/.env.cicd
@@ -3,6 +3,6 @@
 # - SONAR_HOST_URL (Sunucu adresi)
 # - SONAR_LOGIN veya SONAR_TOKEN (Kimlik doğrulama)
 
-SONAR_TOKEN=squ_3155eb9c956e755bc6e1e86f2c152580e63d3c0d
-SONAR_HOST_URL=https://sonar.telenity.com
+SONAR_TOKEN=squ_eceec192b11013c0c532f17b0ce763ecc34f8d7b
+SONAR_HOST_URL=https://sonar:9000
 # admin > SONAR_TOKEN=squ_96365c7d897773fa362cec6a7adba617b49ed92a
