--- a/sonar-cicd.properties
+++ b/sonar-cicd.properties
@@ -11,7 +11,10 @@
 
 # ------------------------ sonar.host.url --------------------------------
 # SonarQube sunucusunun URL'sidir.
-# Projenizin analiz edilmesi için gerekli olan bilgileri içerir.
+# Projenizin analiz edilmesi işini hangi Sonarqube sunucusunda yapacağını belirtir.
+# CI/CD pipeline'ınızda SonarQube Jenkins eklentisi, sunucu URL'sini 
+# SONAR_HOST_URL ortam değişkeniniyle sonar-scanner'ın çalışacağı terminale enjekte eder.
+# Eğer bu dosyayı bir CI/CD pipeline'ında kullanıyorsanız, bu satırı yorum satırı haline getirin.
 # ------------------------------------------------------------------------
 # sonar.host.url=http://host.docker.internal:34000
 
