fix: update devcontainer configuration to include Jenkins service and clean up commented code

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,11 @@
     "./docker-compose.yml"
   ],
   "service": "devcontainer",
+  "runServices": [
+    "devcontainer"
+    ,"sonar"
+    ,"jenkins"
+  ],
   "workspaceFolder": "/workspace",
   "customizations": {
     "vscode": {
