fix: comment out unused environment variables in SonarQube stage and add SONAR_SCANNER_JSON_PARAMS echo

--- a/sonar-cicd.properties
+++ b/sonar-cicd.properties
@@ -26,8 +26,8 @@
 # projectKey ve projectName değerlerini girerseniz, SonarQube web uygulamasında projeniz bu anahtar ve ad ile listelenir.
 # projectName veya projectKey boş bırakılırsa package.json içindeki name alanında belirtilen değer kullanılır.
 # ------------------------------------------------------------------------
-# sonar.projectKey=xxx
-# sonar.projectName=xxx
+sonar.projectKey=xxx
+sonar.projectName=xxx
 
 
 # --------------------- SonarQube Token ----------------------------------
