fix: update SonarQube configuration to include project base directory and refine exclusions

--- a/sonar-local.properties
+++ b/sonar-local.properties
@@ -80,7 +80,7 @@ sonar.typescript.lcov.reportPaths=coverage/lcov.info
 # Örneğin, "**/*.js" ifadesi, tüm dizinlerdeki ".js" uzantılı dosyaları eşleştirir.
 # Genellikle "node_modules" veya "dist" gibi dizinler analiz edilmesi gereken dosyalarını içermez ve bu nedenle analizden hariç tutulmalıdır.
 # ------------------------------------------------------------------------
-sonar.exclusions=**/*.spec.ts,**/*.test.ts,**/*.stories.tsx,**/*.stories.ts,**/*.test.js,**/*.spec.js,**/*.stories.jsx,**/*.stories.js
+sonar.exclusions=node_modules/**,dist/**,test-results/**,**/*.spec.ts,**/*.test.ts,**/*.stories.tsx,**/*.stories.ts,**/*.test.js,**/*.spec.js,**/*.stories.jsx,**/*.stories.js
 
 
 # --------------------- SonarQube Test Inclusions -------------------------
