--- a/.env.cicd
+++ b/.env.cicd
@@ -4,5 +4,5 @@
 # - SONAR_LOGIN veya SONAR_TOKEN (Kimlik doğrulama)
 
 SONAR_TOKEN=squ_4425abde3770b69ab2166e9051732d95b366dc12
-SONAR_HOST_URL=https://sonar:9000
+SONAR_HOST_URL=http://sonar:9000
 # admin > SONAR_TOKEN=squ_96365c7d897773fa362cec6a7adba617b49ed92a
