feat: add Jenkins pipeline for building and uploading artifacts to Nexus

--- a/.devcontainer/services/jenkins/volume/casc_configs/jenkins_config.yaml
+++ b/.devcontainer/services/jenkins/volume/casc_configs/jenkins_config.yaml
@@ -226,7 +226,8 @@ jobs:
           cpsScm {
               scm {
                   git {
-                      remote { url("https://github.com/cemtopkaya/react-ts-dev-cicd.git") }
+                      // remote { url("https://github.com/cemtopkaya/react-ts-dev-cicd.git") }
+                      remote { url("file:///tmp/code-repo") }
                       branches("main")
                       scriptPath('./Jenkinsfile')
                       extensions {
