--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       # -Xmx16g -Xms16g -Djava.io.tmpdir=/var/jenkins_home/tmp
       # https://www.jenkins.io/doc/book/installing/initial-settings/
       # - JAVA_OPTS=-Djenkins.install.runSetupWizard=false  # Kurulum sihirbazını atla (test için)
-      JAVA_OPTS: -Djava.awt.headless=true -Dpermissive-script-security.enabled=true -Djenkins.install.runSetupWizard=false -Dhudson.model.DirectoryBrowserSupport.CSP="sandbox allow-same-origin; default-src 'self'; img-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline';"
+      JAVA_OPTS: -Dhudson.plugins.git.GitSCM.ALLOW_LOCAL_CHECKOUT=true -Djava.awt.headless=true -Dpermissive-script-security.enabled=true -Djenkins.install.runSetupWizard=false -Dhudson.model.DirectoryBrowserSupport.CSP="sandbox allow-same-origin; default-src 'self'; img-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline';"
       JENKINS_OPTS: "--httpPort=8080 --httpListenAddress=0.0.0.0 --argumentsRealm.roles.YONETICI=admin --argumentsRealm.passwd.YONETICI=SIFRE"
       # Kullanıcı adı ve şifreyi burada admin ve admin olarak ayarlıyoruz
       CASC_JENKINS_CONFIG: /tmp/jenkins_home/casc_configs/jenkins_config.yaml
@@ -62,9 +62,28 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./services/jenkins/volume/jenkins_home:/var/jenkins_home
       - ./services/jenkins/volume/casc_configs/jenkins_config.yaml:/tmp/jenkins_home/casc_configs/jenkins_config.yaml:ro
+      - ..:/tmp/code-repo
       # - ./jenkins/home:/var/jenkins_home
       # - ./jenkins/secrets:/var/jenkins_home/secrets
 
+  nexus:
+    container_name: nexus
+    image: sonatype/nexus3:latest
+    restart: unless-stopped
+    networks:
+      - devnet
+    ports:
+      - "8081:8081"  # Nexus web arayüzü
+      - "8082:8082"  # Docker repository için (opsiyonel)
+    # volumes:
+    #   - ./services/nexus/volume/data:/nexus-data
+    environment:
+      - INSTALL4J_ADD_VM_PARAMS=-Xms1g -Xmx2g -XX:MaxDirectMemorySize=2g
+    deploy:
+      resources:
+        limits:
+          memory: 4g
+          
 networks:
   devnet:
     name: devnet
