fix: add missing zip package installation in Dockerfiles

--- a/.devcontainer/Dockerfile.dev
+++ b/.devcontainer/Dockerfile.dev
@@ -10,6 +10,7 @@ RUN apt-get update && \
         curl \
         net-tools \
         tree \
+        zip \
         nano \
         openjdk-17-jre-headless \
         docker.io
