--- a/.devcontainer/services/jenkins/Dockerfile.jenkins
+++ b/.devcontainer/services/jenkins/Dockerfile.jenkins
@@ -23,6 +23,7 @@ RUN apt-get update && \
       iproute2 \
       tree \
       nano \
+      zip \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*-3
 
