--- a/.devcontainer/Dockerfile.build
+++ b/.devcontainer/Dockerfile.build
@@ -20,6 +20,7 @@ RUN apt-get update && \
         # Trivy kurulumu
         wget \
         gnupg \
+        zip \
         lsb-release && \
         wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | gpg --dearmor -o /usr/share/keyrings/trivy.gpg && \
         echo "deb [signed-by=/usr/share/keyrings/trivy.gpg] https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -cs) main" > /etc/apt/sources.list.d/trivy.list && \
