--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -78,7 +78,7 @@ services:
     # volumes:
     #   - ./services/nexus/volume/data:/nexus-data
     environment:
-      - INSTALL4J_ADD_VM_PARAMS=-Xms1g -Xmx2g -XX:MaxDirectMemorySize=2g
+      - INSTALL4J_ADD_VM_PARAMS=-Xms1g -Xmx2g -XX:MaxDirectMemorySize=2g -Dapplication-host=0.0.0.0
     deploy:
       resources:
         limits:
