--- a/.release/Dockerfile.release
+++ b/.release/Dockerfile.release
@@ -1,16 +1,32 @@
-# Build stage
-FROM node:23-slim AS build
-WORKDIR /app
-COPY package*.json ./
-RUN npm ci
-COPY ./dist .
-RUN npm run build
+# # Build stage
+# FROM node:23-slim AS build
 
-# Serve stage
-FROM cgr.dev/chainguard/httpd:2.4.57
+# WORKDIR /app
+# COPY package*.json ./
+# RUN npm ci
+# COPY ../dist .
+# RUN npm run build
 
-# ensure terminal displays Turkish characters correctly when the container starts
-ENV LANG=C.UTF-8
+# # Serve stage
+# FROM cgr.dev/chainguard/httpd:2.4.57
 
-COPY --from=build /app/build /usr/local/apache2/htdocs/
+# # ensure terminal displays Turkish characters correctly when the container starts
+# ENV LANG=C.UTF-8
 
+# COPY --from=build /app/build /usr/local/apache2/htdocs/
+
+
+# En yeni Alpine tabanlı nginx imajını kullan
+FROM nginx:1.27-alpine
+
+# libxml2'yi güncelle (gerekirse)
+RUN apk upgrade --no-cache libxml2
+
+# Vite build çıktısını nginx'e kopyala
+COPY ./dist /usr/share/nginx/html
+
+# NGINX default.conf yerine minimal bir ayar dosyası koy (SPA desteği için)
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
