Add Jenkins pipelines for SonarQube analysis and update documentation
- Created Jenkinsfile.sonar-docker for SonarQube scanning using Docker.
- Created Jenkinsfile.sonar-npmscript for SonarQube scanning using npm scripts.
- Created Jenkinsfile.sonar-npmscript+plugin for SonarQube scanning with plugin support.
- Added README-diff-cover.md for instructions on using diff-cover for coverage reports.
- Added README-react-test.md detailing setup and usage of Vitest for testing React components.
- Added README-react.md for Vite and npm scripts documentation.
- Added README-sonar.md for SonarQube integration and configuration instructions.
- Added README-typescript.md for TypeScript configuration and best practices.
- Updated main README.md to reflect new documentation structure and paths.

--- a/.devcontainer/services/jenkins/volume/casc_configs/jenkins_config.yaml
+++ b/.devcontainer/services/jenkins/volume/casc_configs/jenkins_config.yaml
@@ -234,7 +234,7 @@ jobs:
                       // remote { url("https://github.com/cemtopkaya/react-ts-dev-cicd.git") }
                       remote { url("file:///tmp/code-repo") }
                       branches("main")
-                      scriptPath('./Jenkinsfile')
+                      scriptPath('./.jenkins/Jenkinsfile')
                       extensions {
                         cloneOptions {
                           timeout(10)
