feat: update docker-compose and Jenkinsfile to enhance resource allocation and enable SonarQube scanning

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -27,6 +27,7 @@ services:
         limits:
           # Sonar içinde Elasticsearch ve gömülü bir DB taşıdığı için büyük bir bellek ihtiyacı var
           memory: 4g
+          cpus: 2
     ports:
       - "34000:9000"
       - "39000:9000"
