--- a/sonar-cicd.properties
+++ b/sonar-cicd.properties
@@ -46,6 +46,12 @@ sonar.projectName=react app project
 # ------------------------------------------------------------------------
 # sonar.token==squ_96365c7d897773fa362cec6a7adba617b49ed92a
 
+# arm işlemci mimarisinde sonarqube:community sürümü çalışmadığı için
+# docker-compose.yml dosyasında sonarqube:community yerine sonarqube:9-community kullanılmıştır.
+# Bu sürümde sonar.login bilgisi kullanılmamakta olduğu için aşağıdaki satır aktif edilmiştir.
+sonar.login=squ_78d862e6703bea2e50eb44c0cc97016a1920f4d3
+# sonar.login=sqp_3eab7ecc7135a46d23138ac653d505f7912eb1e1
+
 
 # --------------------- SonarQube Project Version --------------------------
 # Bu değer, projenizin hangi sürümünün analiz edildiğini belirtmek için kullanılır.
@@ -69,11 +75,13 @@ sonar.sourceEncoding=UTF-8
 # Bu değer, projenizin test kapsam raporlarının bulunduğu dizini belirtir.
 # LCOV formatında olan raporlar, genellikle "coverage/lcov.info" veya "coverage/lcov.info" gibi dizinlerde bulunur.
 # ------------------------------------------------------------------------
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.typescript.lcov.reportPaths=test-results/coverage/lcov.info
 
 # --------------------- SonarQube Tests ---------------------------------
 # sonar.tests ile projenizin test dosyalarının bulunduğu dizini belirtir.
 # Genellikle "tests" veya "spec" gibi dizinler kullanılır.
+# Eğer test dosyalarınız test edilecek dosyaların bulunduğu dizinle aynı dizinde ise
+# bu satırı yorum satırı haline getirin.
 # ------------------------------------------------------------------------
 # sonar.tests=tests
 
@@ -83,8 +91,7 @@ sonar.typescript.lcov.reportPaths=coverage/lcov.info
 # Örneğin, "**/*.js" ifadesi, tüm dizinlerdeki ".js" uzantılı dosyaları eşleştirir.
 # Genellikle "node_modules" veya "dist" gibi dizinler analiz edilmesi gereken dosyalarını içermez ve bu nedenle analizden hariç tutulmalıdır.
 # ------------------------------------------------------------------------
-sonar.exclusions=node_modules/**,dist/**,test-results/**,**/*.spec.ts,**/*.test.ts,**/*.stories.tsx,**/*.stories.ts,**/*.test.js,**/*.spec.js,**/*.stories.jsx,**/*.stories.js
-
+sonar.exclusions=**/*.test.tsx,**/*.test.ts,**/*.spec.tsx,**/*.spec.ts,**/*.stories.tsx,**/*.stories.ts,**/*.test.js,**/*.spec.js,**/*.stories.jsx,**/*.stories.js,**/.scannerwork/**,**/.devcontainer/**,**/.release/**,**/.vscode/**,**/node_modules/**,dist/**,test-results/**
 
 # --------------------- SonarQube Test Inclusions -------------------------
 # sonar.test.inclusions ile projenizin hangi test dosyalarının analiz edilmesi gerektiğini belirtir.
