--- a/sonar-local.properties
+++ b/sonar-local.properties
@@ -71,6 +71,8 @@ sonar.typescript.lcov.reportPaths=coverage/lcov.info
 # --------------------- SonarQube Tests ---------------------------------
 # sonar.tests ile projenizin test dosyalarının bulunduğu dizini belirtir.
 # Genellikle "tests" veya "spec" gibi dizinler kullanılır.
+# Eğer test dosyalarınız test edilecek dosyaların bulunduğu dizinle aynı dizinde ise
+# bu satırı yorum satırı haline getirin.
 # ------------------------------------------------------------------------
 # sonar.tests=tests
 
@@ -80,7 +82,7 @@ sonar.typescript.lcov.reportPaths=coverage/lcov.info
 # Örneğin, "**/*.js" ifadesi, tüm dizinlerdeki ".js" uzantılı dosyaları eşleştirir.
 # Genellikle "node_modules" veya "dist" gibi dizinler analiz edilmesi gereken dosyalarını içermez ve bu nedenle analizden hariç tutulmalıdır.
 # ------------------------------------------------------------------------
-sonar.exclusions=node_modules/**,dist/**,test-results/**,**/*.spec.ts,**/*.test.ts,**/*.stories.tsx,**/*.stories.ts,**/*.test.js,**/*.spec.js,**/*.stories.jsx,**/*.stories.js
+sonar.exclusions=.scannerwork/,.devcontainer/**,.release/**,.vscode/**,node_modules/**,dist/**,test-results/**,**/*.spec.ts,**/*.test.ts,**/*.stories.tsx,**/*.stories.ts,**/*.test.js,**/*.spec.js,**/*.stories.jsx,**/*.stories.js
 
 
 # --------------------- SonarQube Test Inclusions -------------------------
